--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Backend",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.4.4"
+    "mongoose": "^7.4.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
