--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "Backend",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "celebrate": "^15.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.4",
     "validator": "^13.11.0"
   },
